--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <div class='main'>    
         <h2> AIがあなたの年齢を当てます</h2>
-        <p>画像を送信してください</p>
+        <p>あなたの顔画像を送信してください</p>
         <form method='POST' enctype="multipart/form-data">
             <input class='file_choose' type="file" name="file">
             <input class='btn' value="submit!" type="submit">
