--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
     <footer>
         <img class='footer_img' src="https://aidemyexstorage.blob.core.windows.net/aidemycontents/1621500180546399.png" alt="Aidemy">
-        <small>&copy; 2021 megumisuzuki, inc.</small>   
+        <small>&copy; 2021 megumi suzuki</small>   
     </footer>
 </body>
 </html>
